<resources>
    <string name="app_name">TestAndroid</string>

    <string name="hello">Hello</string>
    <string name="world">World</string>
    <string name="wonderful">It\'s a wonderful</string>
    <string name="day">day</string>
    <string name="task1">Task1</string>

    <!--ClassWork2 -->
    <string name="class2">classwork2</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="password">PassWord</string>
    <string name="task2">Task 2</string>
    <string name="class3">ClassWork 3</string>
    <string name="link">http://nerdbusiness.com/articles/218-wallpapers/previews/Hamad_Darwish_dot_com_Windows_Vista_Wallpapers_16.jpg</string>
    <string name="task3">Task3</string>
    <string name="task3_button">Press to switch image</string>
    <string name="class4">Class Work 4</string>
    <string name="class5">ClassWork 5</string>
    <string name="class6">Classwork6</string>
    <string name="task4">Task4</string>
</resources>
